[gd_scene load_steps=82 format=2]

[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=1]
[ext_resource path="res://content/map/TileCover.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/sounds/Locations/RelicSwitchChamber/OpenSwitchChamber_1.wav" type="AudioStream" id=3]
[ext_resource path="res://content/map/chamber/cover.png" type="Texture" id=4]
[ext_resource path="res://content/sounds/Locations/RelicSwitchChamber/switchChamberAppear.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Amb/giraffe.wav" type="AudioStream" id=6]
[ext_resource path="res://content/map/chamber/relicswitch/RelicSwitchChamber.gd" type="Script" id=7]
[ext_resource path="res://content/map/chamber/relicswitch/icon_selector.png" type="Texture" id=8]
[ext_resource path="res://content/map/chamber/relicswitch/switch-sheet.png" type="Texture" id=9]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=10]
[ext_resource path="res://content/shared/LightLineOfSight.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 9 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 96, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 120, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 144, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 168, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 192, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 216, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 240, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 264, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 288, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 9 )
region = Rect2( 312, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 9 )
region = Rect2( 336, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 9 )
region = Rect2( 360, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 384, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 9 )
region = Rect2( 408, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 9 )
region = Rect2( 432, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 9 )
region = Rect2( 456, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 9 )
region = Rect2( 480, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 9 )
region = Rect2( 504, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 9 )
region = Rect2( 528, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 9 )
region = Rect2( 552, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 9 )
region = Rect2( 576, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 9 )
region = Rect2( 600, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 9 )
region = Rect2( 624, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 9 )
region = Rect2( 648, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 9 )
region = Rect2( 672, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 9 )
region = Rect2( 696, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 144, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 168, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 192, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 216, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 240, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 264, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 288, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 312, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 9 )
region = Rect2( 336, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 360, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 384, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 408, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 432, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 456, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 480, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 504, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 528, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 9 )
region = Rect2( 552, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 9 )
region = Rect2( 576, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 9 )
region = Rect2( 600, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 624, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 9 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "running",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "opening",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "empty",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ) ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ SubResource( 61 ) ],
"loop": false,
"name": "deactivated",
"speed": 0.0
} ]

[sub_resource type="TileSet" id=1]
0/name = "cover.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 25, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="RelicSwitchChamber" type="Node2D" groups=["saveable"]]
z_index = -10
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, 12 )
frames = SubResource( 23 )

[node name="Usable" parent="." instance=ExtResource( 1 )]
position = Vector2( 12, 12 )
visibleOnFocus = NodePath("../FocusMarker")

[node name="TileCover" parent="." instance=ExtResource( 2 )]
visible = false
tile_set = SubResource( 1 )
tile_data = PoolIntArray( 0, 0, 0 )

[node name="FocusMarker" type="Sprite" parent="."]
position = Vector2( 12, 12 )
texture = ExtResource( 8 )

[node name="ChamberAmbClosed" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 6 )
volume_db = -30.0
pitch_scale = 0.87
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 60.0
minAudibleDistance = 20.0
fadeInTime = 5.0
fadeOutTime = 2.0
loop = true

[node name="ChamberAmbOpen" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 6 )
pitch_scale = 0.85
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 80.0
minAudibleDistance = 40.0
fadeInTime = 5.0
fadeOutTime = 1.0
loop = true

[node name="ChamberSwitchHit" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 3 )
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 200.0
minAudibleDistance = 48.0
removeAfterPlaying = true

[node name="DoorOpen" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 200.0
minAudibleDistance = 48.0
removeAfterPlaying = true

[node name="Light" type="Node2D" parent="."]
position = Vector2( 12, 12 )
script = ExtResource( 11 )
light_name = "teleporter_cave"
light_color = Color( 1, 0.615686, 0.372549, 0.584314 )
light_size = 30.0
light_active = false
light_flicker_strength = 1.0
light_flicker_speed = 4.0

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
